--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "clsx": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
+    "react-transition-group": "^4.4.5",
     "usehooks-ts": "^2.9.1"
   }
 }
